fix up z-index for player

--- a/styles/components/ui/_playerWrapper.scss
+++ b/styles/components/ui/_playerWrapper.scss
@@ -4,7 +4,7 @@
   padding: 0;
   position: fixed;
   bottom: 0;
-  z-index: $z-player-mobile;
+  z-index: $z-player-sticky;
   width: 100%;
 
   @include media($media-tablet) {
